<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PayDetailsForPaymentAndDelivery">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="#030700"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ketomatelogo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="255dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#EFEAEA"
            android:textSize="36sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/Checkout"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/payDetails"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/payMethod"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/payOnline"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/payOnDeli"
            android:textSize="18sp" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="230dp"
            android:layout_marginRight="230dp"
            android:layout_marginBottom="32dp"
            android:background="#77B8EC"
            android:bufferType="normal"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button2"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="32dp"
            android:background="#77B8EC"
            android:text="@string/cont"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</LinearLayout>