<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="119dp"
        android:background="#070707"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownIdInLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="153dp"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ketomatelogo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="207dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#EFEAEA"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="404dp"
        android:layout_height="576dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/ordDetails"
            android:layout_width="212dp"
            android:layout_height="34dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/ordDetails"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/showeditfName"
            android:layout_width="252dp"
            android:layout_height="41dp"

            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/showeditlName"
            app:layout_constraintTop_toBottomOf="@+id/showeditordId" />

        <TextView
            android:id="@+id/showlName"
            android:layout_width="85dp"
            android:layout_height="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/showlName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/showmobile"
            app:layout_constraintStart_toStartOf="@+id/showmobile"
            app:layout_constraintTop_toBottomOf="@+id/showfName"
            app:layout_constraintVertical_bias="0.017" />

        <TextView
            android:id="@+id/showeditlName"
            android:layout_width="252dp"
            android:layout_height="42dp"

            app:layout_constraintEnd_toEndOf="@+id/showeditMobile"
            app:layout_constraintTop_toBottomOf="@+id/showeditfName" />

        <TextView
            android:id="@+id/showmobile"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/showmobile"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/showaddress"
            app:layout_constraintTop_toBottomOf="@+id/showlName" />

        <TextView
            android:id="@+id/showeditMobile"
            android:layout_width="252dp"
            android:layout_height="41dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/showmobile"
            app:layout_constraintEnd_toEndOf="@+id/showeditAddress" />

        <TextView
            android:id="@+id/showaddress"
            android:layout_width="85dp"
            android:layout_height="47dp"
            android:layout_marginTop="44dp"
            android:text="@string/showaddress"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/showordDate"
            app:layout_constraintTop_toBottomOf="@+id/showmobile" />

        <TextView
            android:id="@+id/showeditAddress"
            android:layout_width="252dp"
            android:layout_height="41dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/showaddress"
            app:layout_constraintEnd_toEndOf="@+id/showeditordDate" />


        <TextView
            android:id="@+id/showordDate"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/showordDate"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/showtime"
            app:layout_constraintTop_toBottomOf="@+id/showaddress" />

        <TextView
            android:id="@+id/showeditordDate"
            android:layout_width="252dp"
            android:layout_height="41dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/showordDate"
            app:layout_constraintEnd_toEndOf="@+id/showeditTime" />

        <TextView
            android:id="@+id/showtime"
            android:layout_width="85dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/showtime"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/showeditTime"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showordDate" />

        <TextView
            android:id="@+id/showeditTime"
            android:layout_width="252dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            app:layout_constraintBaseline_toBaselineOf="@+id/showtime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/showtime"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="403dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/showbtnContinue"
                android:layout_width="92dp"
                android:layout_height="48dp"
                android:background="#8BC34A"
                android:text="@string/showcontbtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/editOrd"
            android:layout_width="65dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:background="#8BC34A"
            android:text="@string/editOrd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.594"
            app:layout_constraintStart_toEndOf="@+id/ordDetails"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/showordId"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/ordId"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/showfName"
            app:layout_constraintTop_toBottomOf="@+id/ordDetails" />

        <TextView
            android:id="@+id/showeditordId"
            android:layout_width="252dp"
            android:layout_height="41dp"
            android:text="@string/showeditOrdId"
            app:layout_constraintBaseline_toBaselineOf="@+id/showordId"
            app:layout_constraintEnd_toEndOf="@+id/showeditfName" />

        <TextView
            android:id="@+id/showfName"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/showfName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/showlName"
            app:layout_constraintTop_toBottomOf="@+id/showordId" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
